[package]
name = "cron"
version = "0.1.0"
authors = ["gaobushuang <stormgbs@gmail.com>"]
description = "A Cron Parser Library Written In Rust"
repository="https://github.com/stormgbs/cron-rs.git"
keywords = ["cron", "schedule", "time", "periodic"]
readme = "README.md"
license = "MIT"

[lib]
name = "cron"

[dependencies]
regex="*"
time="*"
