[package]
name = "cron_rs"
version = "0.1.1"
authors = ["gaobushuang <stormgbs@gmail.com>"]
description = "A Cron Parser Library Written In Rust"
repository="https://github.com/stormgbs/cron-rs.git"
keywords = ["cron", "schedule", "time", "periodic"]
readme = "README.md"
license = "MIT"

[lib]
name = "cron_rs"

[dependencies]
regex="~0.2"
time="~0.1"
