[package]
name = "cron_rs"
version = "0.1.6"
authors = ["gaobushuang <stormgbs@gmail.com>"]
description = "A Cron Parser Library And Job Scheduler Written In Rust"
repository="https://github.com/stormgbs/cron-rs.git"
keywords = ["cron", "schedule", "time", "periodic"]
readme = "README.md"
license = "MIT"

[lib]
name = "cron_rs"

[dependencies]
libc = "~0.2"
regex = "~0.2"
time = "~0.1"
serde = "0.9.11"
serde_json = "0.9.9"
serde_derive = "0.9.11"
hyper = "~0.10"
